// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RiskAnalysisInputWrapper testing > should be render correclty with error and without infoLabel 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-zv7ju9"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
        >
          <div
            class="MuiStack-root css-givlym-MuiStack-root"
          >
            <label
              class="MuiFormLabel-root MuiFormLabel-colorPrimary Mui-error css-j6w7dp-MuiFormLabel-root"
            >
              Test title
            </label>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          >
            Test children for snapshot
          </p>
          <span
            class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1cxaca5-MuiFormHelperText-root"
          >
            test
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RiskAnalysisInputWrapper testing > should be render correclty with infoLabel and without error 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-zv7ju9"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
        >
          <div
            class="MuiStack-root css-givlym-MuiStack-root"
          >
            <label
              class="MuiFormLabel-root MuiFormLabel-colorPrimary css-j6w7dp-MuiFormLabel-root"
            >
              Test title
            </label>
            <span
              class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
            >
              Test description
            </span>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          >
            Test children for snapshot
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RiskAnalysisInputWrapper testing > should be render correctly with error and infoLabel 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-zv7ju9"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
        >
          <div
            class="MuiStack-root css-givlym-MuiStack-root"
          >
            <label
              class="MuiFormLabel-root MuiFormLabel-colorPrimary Mui-error css-j6w7dp-MuiFormLabel-root"
            >
              Test title
            </label>
            <span
              class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
            >
              test
            </span>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          >
            Test children for snapshot
          </p>
          <span
            class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1cxaca5-MuiFormHelperText-root"
          >
            Test error
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RiskAnalysisInputWrapper testing > should be render correctly with error, infoLabel and helperText 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-zv7ju9"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
        >
          <div
            class="MuiStack-root css-givlym-MuiStack-root"
          >
            <label
              class="MuiFormLabel-root MuiFormLabel-colorPrimary Mui-error css-j6w7dp-MuiFormLabel-root"
            >
              Test title
            </label>
            <span
              class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
            >
              test
            </span>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          >
            Test children for snapshot
          </p>
          <span
            class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1cxaca5-MuiFormHelperText-root"
          >
            helperText
          </span>
          <span
            class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1cxaca5-MuiFormHelperText-root"
          >
            Test error
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RiskAnalysisInputWrapper testing > should be render correctly without description and error 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-u52cu0-MuiPaper-root"
    >
      <div
        class="MuiStack-root css-jfdv4h-MuiStack-root"
      >
        <div
          class="MuiStack-root css-3y1137-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-zv7ju9"
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
        >
          <div
            class="MuiStack-root css-givlym-MuiStack-root"
          >
            <label
              class="MuiFormLabel-root MuiFormLabel-colorPrimary css-j6w7dp-MuiFormLabel-root"
            >
              Test title
            </label>
          </div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
          >
            Test children for snapshot
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;
